# runtime

./: .gitignore  Dockerfile  README.md  constraints.txt  pyproject.toml  seed_context_store.py
.github/workflows/: gemini-pr-review.yml  workflow.yml
benchmarks/: Makefile.common  README.md  _smoke_harness.py
benchmarks/_templates/: datasets.md  spec.md
benchmarks/biotech/: Makefile  bench.smoke.toml  bench.toml  datasets.md  fetch.py  harness.py  spec.md
benchmarks/edge/: Makefile  __init__.py  bench.smoke.toml  bench.toml  build_manifest.py  datasets.md  datasets_proposal.md  fetch.py  harness.py  kitti_source.py  nuscenes_source.py  spec.md
benchmarks/hft/: Makefile  bench.smoke.toml  bench.toml  datasets.md  gen_manifest.py  generate.py  harness.py  manifest.yaml  spec.md
benchmarks/hft/generator/: CMakeLists.txt  main.cpp
benchmarks/kitti/: results.md  spec.md
benchmarks/skeleton/: __init__.py  measure_overhead.py  overhead.md
docs/: invariants.md
docs/scoring/: input_contract.md
gitm/: __init__.py  _paths.py  api.py  cli.py  doctor.py
gitm/agents/: __init__.py  policy.py
gitm/bench/: __init__.py  __main__.py  baseline.py  cli.py  edge_manifest.py  manifest.py  profile.py  reproduce.py  results.py  runner.py  schema.py
gitm/kernels/: __init__.py  library.py  library.yaml  spec.py
gitm/optimizer/: __init__.py  apply.py  attribution.py  dr.py  headroom_kernel_rank.py  invariants.py  monitor.py  multibasis.py  qualification.py  replay.py  replay_validation.py  report.py
gitm/planner/: __init__.py  graph.py  kitti_graph.py  roofline.py
gitm/routing/: bridge_alumni.py  dedup_scorer_rows.py  (+3 more)
harness/: build_edge_yaml_manifest.py  fill_results.py  gen_kitti_manifest.py  pod_setup_and_run.sh  run_baselines.sh  setup_openpcdet.sh  smoke_kitti.py  verify_manifest.py
scripts/: compare_results.py  emit_report.py  gpu_live_capture.py  gpu_setup.sh  heyreach_sync.sh  run_under_runtime.py  ship_to_pod.sh  verify_infra.sh  w2_on_real_trace.py
skills/: gitm-affinity-mapper.md  gitm-context-store.md  gitm-dossier-builder.md  gitm-draft-voice.md  gitm-heyreach-sync.md  gitm-internal-status-loop.md  gitm-signal-scan.md
tests/: conftest.py  test_apply_rollback.py  test_bench.py  test_bench_datasets.py  test_cupti.py  test_framework_harnesses.py  test_hft_harness.py  test_kitti_benchmark.py  test_planner_roofline.py  test_qualification_fingerprint.py  test_report_snapshot.py  test_scorer.py  test_smoke.py  test_tracer_jsonl.py  test_w2_runtime.py
(+33 files in other folders)
