[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "gitm-labs"
version = "0.0.1"
description = "Behavioral compiler and intervention runtime for vLLM decode workloads."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GITM" }]
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.6",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
nvidia = ["pynvml>=11.5"]
# Benchmark layer: HFT Parquet generator (pyarrow) + the LOB harness CPU
# fallback (pandas). On a GPU box the harness runs on cuDF/CuPy instead — those
# install from the RAPIDS channel, not PyPI, so they are not listed here.
bench = ["pyarrow>=15", "pandas>=2.0"]
prometheus = ["prometheus-client>=0.20"]
otlp = ["opentelemetry-sdk>=1.25", "opentelemetry-exporter-otlp>=1.25"]
s3 = ["boto3>=1.34"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",  # `python -m build` for the wheel-build verification check
]

[project.scripts]
gitm = "gitm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gitm"]

[tool.hatch.build.targets.wheel.force-include]
"gitm/optimizer/templates/report.md.j2" = "gitm/optimizer/templates/report.md.j2"
"gitm/bench/templates/results.md.j2" = "gitm/bench/templates/results.md.j2"
"gitm/tracer/_cupti/cupti_shim.c" = "gitm/tracer/_cupti/cupti_shim.c"
"gitm/kernels/library.yaml" = "gitm/kernels/library.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]
